# neurorvq-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
figures/: benchmark_comparison.md  benchmark_python.csv  benchmark_results.csv  benchmark_results_ndarray.csv  benchmark_results_wgpu.csv  benchmark_summary.md
flags/: NeuroRVQ_ECG_v1.yml
scripts/: bench_python.py  compare_all.py  compare_benchmarks.py  convert_pt_to_safetensors.py
src/: channels.rs  config.rs  data.rs  encoder.rs  lib.rs  weights.rs
src/model/: attention.rs  encoder_block.rs  feedforward.rs  foundation.rs  mod.rs  multi_scale_conv.rs  norm.rs  patch_embed.rs  quantizer.rs  rvq.rs  tokenizer.rs
